tests/correct/def_different_types.py
# Testing single function and calling it with different arguments

def f(x):
    print x

a = f(1)
b = f('hello')
