tests/error/class_in_def.py
def a():
    class b:
        pass
    print 'hello'
